--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 <br>
             <label for="nova">Have you seen Nova?:</label>
             <input type="radio" id="nova" name="nova" value="Yes">Yes
-            <input type="radio" id="nova" name="nova" value="No">No
+            <input type="radio" id="nova2" name="nova" value="No">No
 <br>
-            <img src="Nova.jpg" alter="Nova">
+            <img src="Nova.jpg" alt="Nova">
 <br>
             <label for="anythingElse">Anything else you want to add?:</label>
             <textarea  id="anythingElse" name="anythingElse" rows="3" cols="55"></textarea>
